# serial-bridge

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: FindTinyXML2.cmake  Packing.cmake
config/: serial_bridge_amm.xml  serial_bridge_capabilities.xml  serial_bridge_configuration.xml
src/: CMakeLists.txt  Errors.h  SerialBridgeMain.cpp
src/Serial/: arduino-serial-lib.h
